# Enfusion__

./: CMakeLists.txt  README.md  main.cpp
GameData/: Game.cpp  Game.h
GameData/AI/: Agent.cpp  Agent.h
GameData/Anim/: Animator.cpp  Animator.h
GameData/Component/: Inventory.cpp  Inventory.h
GameData/Core/: AssetManager.cpp  AssetManager.h  Engine.h
GameData/Data/: Controls.h  ItemEffects.h  Items.h
GameData/Data/Levels/Level_1/: Level_1.cpp  Level_1.h
GameData/Engine/AI/: Agent.cpp  Agent.h
GameData/Engine/Anim/: Animator.cpp  Animator.h
GameData/Engine/Component/: Component.cpp  Component.h
GameData/Engine/Component/Anim/: AnimComp.cpp  AnimComp.h  AnimatedSprite.cpp  AnimatedSprite.h  Animator.cpp  Animator.h
GameData/Engine/Component/Base/: Collider.cpp  Collider.h  Position.cpp  Position.h  Sprite.cpp  Sprite.h  Z.cpp  Z.h
GameData/Engine/Component/Misc/: Camera.cpp  Camera.h  Inventory.cpp  Inventory.h
GameData/Engine/Component/Motion/: AnimatedMovement.cpp  AnimatedMovement.h  PlayerFreeInput.cpp  PlayerFreeInput.h
GameData/Engine/Core/: AssetManager.cpp  AssetManager.h  CGlobal.h  ComponentManager.h  ECS.h  Engine.h  Global.h  Settings.cpp  Settings.h
GameData/Engine/Entity/: Entity.cpp  Entity.h  Player.cpp  Player.h
GameData/Engine/Item/: Item.h  ItemRegistry.h
GameData/Engine/Lvl/: Biome.h  BiomeManager.cpp  BiomeManager.h  Level.cpp  Level.h  LevelManager.cpp  LevelManager.h  MapGenerator.cpp  MapGenerator.h  Tilemap.cpp  Tilemap.h  Tileset.cpp  Tileset.h
GameData/Engine/Misc/: Item.cpp  Item.h  ItemEffects.cpp  ItemEffects.h  ItemRegistry.cpp  ItemRegistry.h
GameData/Engine/Objects/: GameObject.cpp  Player.cpp  Player.h
GameData/Engine/ScriptEngine/: ScriptEngine.c  ScriptEngine.h  ScriptHook.c  ScriptHook.h
GameData/Entity/: Player.cpp  Player.h
GameData/Entity/Level/: ItemPickup.cpp  ItemPickup.h
GameData/Levels/: Level.cpp  Level.h  LevelManager.cpp  LevelManager.h
GameData/Levels/Level_1/: Level_1.cpp  Level_1.h
GameData/Lvl/: Biome.h  BiomeManager.cpp  BiomeManager.h  GridSprite.cpp  GridSprite.h  LvlStructs.h  MapGenerator.cpp  MapGenerator.h
GameData/Lvl/Biomes/: Biome_Desert.cpp  Biome_Desert.h  Biome_Woodland.cpp  Biome_Woodland.h
GameData/Misc/: Engine.h
GameData/Objects/: GameObject.cpp  GameObject.h  Player.cpp  Player.h
Mods/ExampleMod/: mod.py
(+76 files in other folders)
